HttpClient, user interface

--- a/src/app/features/pages/myprofile/myprofile.component.html
+++ b/src/app/features/pages/myprofile/myprofile.component.html
@@ -1,1 +1,70 @@
-<p>myprofile works!</p>
+<!-- Content -->
+<section id="content">
+    <div class="container">
+        <div class="row">
+            <div class="col-3 col-12-medium">
+
+                <!-- Left Sidebar -->
+                    <section>
+                        <header>
+                            <h2>Menú</h2>
+                        </header>
+                        <ul class="link-list">
+                            <li><a href="#">Ver todos mis posteos</a></li>
+                            <li><a href="#">Ver todos mis álbumes</a></li>
+                            <li><a href="#">Ver mis TO DO's</a></li>
+                        </ul>
+                    </section>
+            </div>
+
+            <div class="col-9 col-12-medium imp-medium">
+
+                <!-- Main Content -->
+                <section>
+                    <header>
+                        <h2>Nombre y Apellido</h2>
+                    </header>
+                    <ul class="link-list">
+                        <li><img src="assets/images/pic01.jpg" alt="" /></li>
+                    </ul>
+                </section>
+
+                <section>
+                    <header>
+                        <h2>Sitio Wep</h2>
+                    </header>
+                    <ul class="link-list">
+                        <li><a href="#">www.ponerpaginaweb.com</a></li>
+                    </ul>
+                </section>
+
+                <section>
+                    <header>
+                        <h2>Sitio Wep</h2>
+                    </header>
+                    <ul class="link-list">
+                        <li><a href="#">www.ponerpaginaweb.com</a></li>
+                    </ul>
+                </section>
+
+                <section>
+                    <header>
+                        <h2>Empresa</h2>
+                    </header>
+                    <p>
+                        Romaguera-Crona
+                    </p>
+                    <p>
+                        Multi-layered client-server neural-net
+                    </p>
+                    <p>
+                        harness real-time e-markets
+                    </p>
+                </section>
+
+            </div>
+            
+            
+        </div>
+    </div>
+</section>
