--- a/src/app/features/pages/home/home.component.html
+++ b/src/app/features/pages/home/home.component.html
@@ -11,7 +11,7 @@
             <div class="col-6 col-12-medium imp-medium">
 
                  <!-- Banner Image -->
-                    <a href="#" class="bordered-feature-image"><img src="assets/images/banner.jpg" alt="" /></a>
+                    <a href="#" class="bordered-feature-image"><img src="assets/images/banner.jpg" alt="banner image" /></a>
 
             </div>
         </div>
