Http getAllPosts, interface posts, page posts

--- a/src/app/features/pages/myprofile/myprofile.component.html
+++ b/src/app/features/pages/myprofile/myprofile.component.html
@@ -24,7 +24,7 @@
                     <header>
                         <h2> {{ user.name }} </h2>
                     </header>
-                    <img src="https://avatars.dicebear.com/api/initials/{{user.name}}.svg" alt="avatar image" style="max-height: 250px;"/>
+                    <img src="https://avatars.dicebear.com/api/gridy/{{user.name}}.svg" alt="avatar image" style="max-height: 250px;"/>
                 </section>
 
                 <section>
