--- a/src/app/core/navbar/navbar.component.html
+++ b/src/app/core/navbar/navbar.component.html
@@ -4,16 +4,16 @@
             <div class="col-12">
 
                 <!-- Logo -->
-                    <h1><a href="index.html" id="logo">Blog Challenge</a></h1>
+                    <h1><a routerLink="home" id="logo">Blog Challenge</a></h1>
 
                 <!-- Nav -->
                     <nav id="nav">
-                        <a href="index.html">Login</a>
-                        <a href="threecolumn.html">Mi Perfil</a>
-                        <a href="twocolumn1.html">Usuarios</a>
-                        <a href="twocolumn2.html">Posteos</a>
-                        <a href="onecolumn.html">Álbumes</a>
-                        <a href="onecolumn.html">TO-DOs</a>
+                        <a routerLink="home">Login</a>
+                        <a routerLink="home/mi-perfil">Mi Perfil</a>
+                        <a routerLink="home/usuarios">Usuarios</a>
+                        <a routerLink="home/posts">Posteos</a>
+                        <a routerLink="home/albums">Álbumes</a>
+                        <a routerLink="home/TO-DOs">TO-DOs</a>
                     </nav>
 
             </div>
