--- a/src/app/features/pages/user-posts/user-posts.component.html
+++ b/src/app/features/pages/user-posts/user-posts.component.html
@@ -13,7 +13,9 @@
                     </div>
                 </section>
             </div>
+            
             <div class="col-9 col-12-medium">
+                
                 <div class="div-container">
                     <!-- Main Content -->
                     <mat-card *ngFor="let post of posts; let i= index" class="card">
@@ -26,7 +28,7 @@
                             <div>
                                 <button mat-raised-button color="accent" (click)="modify(post)">Modificar</button>
                                 <button mat-raised-button color="accent" (click)="deletePost(i)">Eliminar</button>
-                                <button mat-raised-button color="primary" >Detalles</button>
+                                <button mat-raised-button color="primary" (click)="details(post);">Detalles</button>
                             </div>
                         </mat-card-actions>
                     </mat-card>
