class css: coments in details components

--- a/src/app/features/pages/details/details.component.html
+++ b/src/app/features/pages/details/details.component.html
@@ -15,10 +15,26 @@
                     neque repellendus perferendis architecto fugit, quod quis maiores iusto ut, distinctio magni? Est, fuga.
                 </p>
                 <hr>
+                <div class="comments">
+                    <h2>Nombre</h2>
+                    <p>Email</p>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+                        Architecto praesentium quae esse placeat perspiciatis voluptates facere, corrupti cumque. 
+                        Ad laudantium tempora saepe, qui earum praesentium maxime corrupti nesciunt nemo minima!
+                    </p>
+                </div>
+                <div class="comments">
+                    <h2>Nombre</h2>
+                    <p>Email</p>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+                        Architecto praesentium quae esse placeat perspiciatis voluptates facere, corrupti cumque. 
+                        Ad laudantium tempora saepe, qui earum praesentium maxime corrupti nesciunt nemo minima!
+                    </p>
+                </div>
             </mat-card-content>
             
             <mat-card-actions>
-                <button mat-raised-button color="accent" > Ver comentarios </button>
+                <button mat-raised-button color="accent" > Ver comentarios </button>         
             </mat-card-actions>
         </mat-card>
     </div>
