--- a/src/app/features/pages/details/details.component.html
+++ b/src/app/features/pages/details/details.component.html
@@ -25,7 +25,8 @@
             </mat-card-content>
             
             <mat-card-actions>
-                <button mat-raised-button color="accent" (click)="openComents()"> {{ text }} </button>         
+                <button mat-raised-button color="accent" (click)="openComents()"> {{ text }} </button>
+                <button mat-raised-button color="primary" (click)="back()"> Volver </button>        
             </mat-card-actions>
         </mat-card>
     </div>
