pages modules optimization

--- a/src/app/core/navbar/navbar.component.html
+++ b/src/app/core/navbar/navbar.component.html
@@ -9,11 +9,11 @@
                 <!-- Nav -->
                     <nav id="nav">
                         <a routerLink="home">Login</a>
-                        <a routerLink="home/mi-perfil">Mi Perfil</a>
-                        <a routerLink="home/usuarios">Usuarios</a>
-                        <a routerLink="home/posts">Posteos</a>
-                        <a routerLink="home/albums">Álbumes</a>
-                        <a routerLink="home/TO-DOs">TO-DOs</a>
+                        <a routerLink="mi-perfil">Mi Perfil</a>
+                        <a routerLink="usuarios">Usuarios</a>
+                        <a routerLink="posts">Posteos</a>
+                        <a routerLink="albums">Álbumes</a>
+                        <a routerLink="to-dos">TO-DOs</a>
                     </nav>
 
             </div>
