Page posts , img posts

--- a/src/app/features/feature-b/pages/posts/posts.component.html
+++ b/src/app/features/feature-b/pages/posts/posts.component.html
@@ -1,3 +1,17 @@
-<div class="container">
-    <p>posts works!</p>
-</div>
+<!-- Content -->
+<section id="content">
+    <div class="container">
+        <!-- <div class="col-3 col-12-medium">
+
+            <section>
+                <header> <h2>Cantidad de Posteos </h2> </header>
+            </section>
+
+        </div> -->
+        <div class="col-12 col-12-medium">
+
+            <app-cards></app-cards>
+
+        </div>
+    </div>
+</section>
