--- a/src/app/features/feature-b/pages/myprofile/myprofile.component.css
+++ b/src/app/features/feature-b/pages/myprofile/myprofile.component.css
@@ -2,3 +2,20 @@
     display: flex;
     justify-content: center;
 }
+
+.wrap {
+    display: flex;
+    flex-wrap: wrap;
+}
+
+.txt-center {
+    text-align: center;
+}
+
+button {
+    margin: 2px;
+}
+
+a {
+    cursor: pointer;
+}
