--- a/src/app/features/feature-b/pages/myprofile/myprofile.component.html
+++ b/src/app/features/feature-b/pages/myprofile/myprofile.component.html
@@ -15,6 +15,7 @@
                         <li><a (click)="myPosts()">Ver mis posts</a></li>
                         <li><a href="#">Ver mis albums</a></li>
                         <li><a href="#">Ver mis TO DOs</a></li>
+                        <li *ngIf="back"><a (click)="menuBack()">Volver</a></li>
                     </ul>
                 </section>
             </div>
