--- a/src/app/shared/cards/cards.component.html
+++ b/src/app/shared/cards/cards.component.html
@@ -1,9 +1,14 @@
 <mat-card class="card">
+
     <mat-card-header>
-        <mat-card-title> {{posts.title}} </mat-card-title>
+        <mat-card-title *ngIf="isPost"> {{post.title}} </mat-card-title>
+        <mat-card-title *ngIf="isAlbum"> {{album.title}} </mat-card-title>
+        <mat-card-title *ngIf="isTodos"> {{todos.title}} </mat-card-title>
     </mat-card-header>
+
     <img mat-card-image src="assets/libros.jpg" alt="post image">
-    <mat-card-content>
-        {{posts.body}}
+    
+    <mat-card-content *ngIf="isPost">
+        {{post.body}}
     </mat-card-content>
 </mat-card>
