--- a/src/app/features/feature-b/pages/myprofile/myprofile.component.html
+++ b/src/app/features/feature-b/pages/myprofile/myprofile.component.html
@@ -24,7 +24,7 @@
 
                 <!-- Main content -->
                 <div class="space">
-                    <app-userscards [user]="user"></app-userscards>
+                    <app-userscards [user]="user" [userInfo]="infoUser"></app-userscards>
                 </div>
 
             
