--- a/src/app/features/feature-b/pages/users/users.component.html
+++ b/src/app/features/feature-b/pages/users/users.component.html
@@ -1,3 +1,13 @@
-<div class="container">
-    <p>users works!</p>
-</div>
+<section id="content">
+    <div class="container">
+        <div class="row">
+            <div class="col-12 col-12-medium" *ngIf="users.length > 0">
+                <div class="wrap">
+                    <div *ngFor="let user of users" class="m">
+                        <app-userscards [user]="user"></app-userscards>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
