--- a/src/app/shared/cards/cards.component.css
+++ b/src/app/shared/cards/cards.component.css
@@ -1,10 +1,15 @@
 .card {
     width: 450px;
+    
     margin: 10px;
 }
 
 img {
     width: 450px;
     height: auto;
+}
+
+.txt-center {
+    text-align: center;
 }
 
