--- a/src/app/shared/userscards/userscards.component.html
+++ b/src/app/shared/userscards/userscards.component.html
@@ -8,7 +8,7 @@
         <img src="https://avatars.dicebear.com/api/miniavs/{{user.name}}.svg" alt="user avatar">
     </div>
     <hr>
-   <div class="txt-center">
+   <div class="txt-center" *ngIf="userInfo">
     <p>
         Web: {{ user.website }}
     </p>
