--- a/src/app/features/feature-b/pages/todos/todos.component.css
+++ b/src/app/features/feature-b/pages/todos/todos.component.css
@@ -1,4 +1,11 @@
 .wrap {
     display: flex;
     flex-wrap: wrap;
+    justify-content: center;
 }
+
+.center {
+    display: flex;
+    justify-content: center;
+}
+
