--- a/src/app/features/feature-b/pages/albums/albums.component.html
+++ b/src/app/features/feature-b/pages/albums/albums.component.html
@@ -1,9 +1,15 @@
 <section id="content">
     <div class="container">
         <div class="row">
-            <div class="col-6 col-12-medium" *ngFor="let a of albums">
+            <div class="col-12 col-12-medium" >
+
+                <div class="wrap">
+                    <div *ngFor="let a of albums">
+                        <app-cards [album]="a" [isAlbum]="infoAlbum" ></app-cards>
+                    </div>
+                </div>
                 
-                <app-cards [album]="a" [isAlbum]="infoAlbum" ></app-cards>    
+                    
                 
             </div>
         </div>
