--- a/src/app/features/feature-b/pages/posts/posts.component.css
+++ b/src/app/features/feature-b/pages/posts/posts.component.css
@@ -1,7 +1,7 @@
 .wrap {
     display: flex;
     flex-wrap: wrap;
-    justify-content: space-around;
+    justify-content: center;
 }
 
 app-cards {
