--- a/src/app/features/feature-b/pages/myprofile/myprofile.component.html
+++ b/src/app/features/feature-b/pages/myprofile/myprofile.component.html
@@ -23,7 +23,7 @@
             <div class="col-10 col-12-medium" *ngIf="infoUser">
 
                 <!-- Main content -->
-                <div class="space">
+                <div class="center">
                     <app-userscards [user]="user" [userInfo]="infoUser"></app-userscards>
                 </div>
 
