page users: router users details

--- a/src/app/features/feature-b/pages/users-details/users-details.component.html
+++ b/src/app/features/feature-b/pages/users-details/users-details.component.html
@@ -11,9 +11,9 @@
                         <hr>
                     </header>
                     <ul class="link-list">
-                        <li><a (click)="userPosts()">Ver mis posts</a></li>
-                        <li><a (click)="userAlbums()">Ver mis albums</a></li>
-                        <li><a (click)="userTodos()">Ver mis TO DOs</a></li>
+                        <li><a (click)="userPosts()">Ver sus posts</a></li>
+                        <li><a (click)="userAlbums()">Ver sus albums</a></li>
+                        <li><a (click)="userTodos()">Ver sus TO DOs</a></li>
                         <li *ngIf="back"><a (click)="menuBack()">Volver</a></li>
                     </ul>
                 </section>
