--- a/src/app/features/feature-b/pages/posts/posts.component.html
+++ b/src/app/features/feature-b/pages/posts/posts.component.html
@@ -1,10 +1,14 @@
 <section id="content">
     <div class="container">
         <div class="row">
-            <div class="col-12 col-12-medium" >
+            <div class="col-12 col-12-medium">
+
+                <div class="center" *ngIf="spinner">
+                    <mat-spinner></mat-spinner>
+                </div>
 
                 <div class="wrap">
-                    <div *ngFor="let p of posts">
+                    <div *ngFor="let p of posts" class=" animate__animated animate__fadeIn">
                         <app-cards [post]="p" [isPost]="infoPost"></app-cards>
                     </div>
                 </div>               
