--- a/src/app/features/feature-b/pages/users/users.component.html
+++ b/src/app/features/feature-b/pages/users/users.component.html
@@ -1,10 +1,13 @@
 <section id="content">
     <div class="container">
         <div class="row">
-            <div class="col-12 col-12-medium" *ngIf="users.length > 0">
+            <div class="col-12 col-12-medium">
+                <div class="center" *ngIf="spinner">
+                    <mat-spinner></mat-spinner>
+                </div>
                 <div class="wrap">
-                    <div *ngFor="let user of users" class="m">
-                        <app-userscards [user]="user" (click)="details(user.id)"></app-userscards>
+                    <div *ngFor="let user of users" class="m animate__animated animate__fadeIn">
+                        <app-userscards [user]="user" (click)="details(user.id)" ></app-userscards>
                     </div>
                 </div>
             </div>
